static/styles.css
:root {
  /* Color Variables */
  --maincolor: #1e0f35;
  --secondarycolor: #221438;
  --tertiarycolor: #412173;

  --buttoncolor: #1e0f35;
  --buttonhovercolor: #1e0f35;
  --buttonclickcolor:  #1e0f35;
}

html {
  overflow-x: hidden;
}

body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  color: #ffffff;
  background-color: var(--secondarycolor);
  display: flex;
  flex-direction: column; /* Ensures content and footer are in a column layout */
  overflow-x: hidden;
  height: 100vh;
}



.logo {
  height: 80px;
  width: auto;
  vertical-align: left;
  margin-right: 15px;
  transition: transform 0.3s ease;
}

.logo:hover {
  transform: scale(1.01); /* Slightly enlarges logo on hover */
}

header {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Tahoma', sans-serif;
  font-weight: 500;
  background-color: #1e0f35;
  color: white;
  padding: 10px 20px;
  text-align: center;
}

nav ul {
  list-style-type: none;
  padding: 0;
  display: flex;
}

nav ul li {
  margin: 0 10px;
}

nav ul li a {
  font-size: 20px;
  color: white;
  text-decoration: none;
  transition: color 0.3s ease;
}

.mobile-menu,
.menu-toggle {
  display: none;
}

nav ul li a:hover {
  color: #d8d8d8; /* Change color on hover */
}

.social-links {
  display: flex;
  gap: 20px;
  margin-left: auto;
}

.icon {
  height: 60px;
  width: 60px;
  transition: transform 0.3s ease;
}

.icon:hover {
  transform: scale(1.03); /* Slightly enlarges icon on hover */
}

footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-family: 'Tahoma', sans-serif;
  background-color: #1e0f35;
  color: white;
  padding: 20px;
  text-align: center;
  width: 100%;
  margin-top: auto; /* Pushes footer down if content is insufficient */
}

.footer-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

footer p {
  margin: 10px 0;
  font-size: 14px;
}

footer a {
  color: white;
  text-decoration: underline;
  transition: color 0.3s;
}

footer a:hover {
  color: #f2f2f2; 
}

.footer-logo img {
  width: 30px;
  height: auto;
  margin-top: 10px;
}

main {
  padding: 20px;
  flex-grow: 1;
}

h2 {
  color: #4c4eaf;
}

section {
  margin-bottom: 2rem;
  padding: 1rem;
  border: 1px solid #ccc;
  border-radius: 5px;
}

.hero {
  display: flex;
  flex-direction: column; /* Stacks elements vertically */
  align-items: center;
  text-align: center;
  padding: 10px;
  background-color: #221438;
  color: white;
}

.cta-buttons {
  margin-top: 20px;
  display: flex;
  gap: 10px;
}

.cta-buttons .btn {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 180px;
  height: 30px;
  text-decoration: none;
  color: rgb(255, 255, 255);
  background-color: #412173;
  padding: 10px 20px;
  border-radius: 5px;
  text-align: center;
  transition: background-color 0.3s ease;
}

.cta-buttons .btn:hover {
  background-color: var(--buttonhovercolor);
}

.why-sus {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin: 40px auto;
  max-width: 1200px;
  background-color: var(--secondarycolor);
  border: none;
}

.why-sus-text {
  text-align: center;
}

.why-sus-text h2 {
  color: #ffffff;
  font-size: 28px;
  margin-bottom: 10px;
}

.why-sus-text p {
  font-size: 18px;
}

.features-code-wrapper {
  display: flex;
  gap: 20px;
  justify-content: space-between;
  align-items: stretch;
}

.features-grid {
  flex: 1;
  max-width: 50%;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.feature {
  display: flex;
  align-items: center;
  padding: 15px;
  border-left: 5px solid var(--tertiarycolor);
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 8px;
  text-align: left;
  box-sizing: border-box;
}

.feature-icon {
  font-size: 30px;
  color: var(--buttonhovercolor);
  margin-right: 15px;
}

.feature h3 {
  font-size: 20px;
  margin-bottom: 10px;
  color: #d7acff;
  margin-top: 0;
}

.feature p {
  font-size: 16px;
  line-height: 1.4;
}

.editor-container {
  flex: 1;
  max-width: 50%;
  height: auto;
  min-height: 357px;
  border: 2px solid var(--tertiarycolor);
  border-radius: 8px;
  overflow: hidden;
  background-color: #1e1e1e;
}

@media (max-width: 768px) {
  .features-code-wrapper {
    flex-direction: column;
  }

  .features-grid, .editor-container {
    max-width: 100%;
  }
}

.examples-link-container {
  width: 100%;
  text-align: right;
  

}

.more-examples-link {
  font-size: 12px;
  color: #fff;
  text-decoration: underline;
}


#core-philosophy {
  padding: 20px;
  background-color: var(--secondarycolor);
  border-radius: 8px;
  margin: 0 auto;
  width: 70%; 
   
}

#core-philosophy h2, #core-philosophy h3 {
  color: #ffffff;
  font-size: 28px;
  margin-bottom: 10px;
}

#core-philosophy p, #core-philosophy ul {
  font-size: 16px;
  line-height: 1.6;
}

#core-philosophy ul {
  padding-left: 20px;
}

#core-philosophy li {
  margin-bottom: 10px;
}

.accordion {
  margin-top: 20px;
  text-align: left;
}

.accordion-item {
  margin-bottom: 10px;
}

.accordion-header {
  display: flex;
  align-items: center;
  background-color: #1e0f35;
  padding: 15px;
  width: 100%;
  text-align: left;
  font-size: 18px;
  cursor: pointer;
  transition: background-color 0.3s;
  border-radius: 6px;
  color: white;
  border: none;
}

.accordion-header:hover {
  background-color: #412173;
}

.accordion-content {
  padding: 15px;
  background-color: #1e0f35;
  display: none;
  border-left: 5px solid var(--tertiarycolor);
  border-radius: 6px;
}

.accordion-item.active .accordion-content {
  display: block;
}

.accordion-item + .accordion-item {
  margin-top: 10px;
}

.section-container {
  display: flex;
  justify-content: space-between;
  gap: 4%;
  margin-top: 20px;
  color: #ffffff;
}

.section-item {
  flex: 1 1 48%;
  padding: 20px;
  background-color: var(--secondarycolor);
  border-radius: 8px;
  border: none;
  text-align: center;
  color: #ffffff;
}
/* ... */

